# LSPlant

lsplant/src/main/jni/: CMakeLists.txt
test/src/main/jni/: CMakeLists.txt  test.cpp
